--- a/kemel.cabal
+++ b/kemel.cabal
@@ -53,6 +53,8 @@ executable kemel
                       , vector
                       , data-default
                       , split
+                      , hashtables
+                      , hashable
     hs-source-dirs:   src
     default-language: Haskell2010
     ghc-options:
