Add a history file and basic symbol completion

--- a/kemel.cabal
+++ b/kemel.cabal
@@ -55,6 +55,7 @@ executable kemel
                       , data-default
                       , hashtables
                       , hashable
+                      , filepath
     hs-source-dirs:   src
     default-language: Haskell2010
     ghc-options:
